--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,6 +1,8 @@
 $icons: (0:0)
-$icons: map-merge($icons,(codedby: (X: 0px, Y:-9px, W: 47px, H: 5px, TW: 49px, TH: 14px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(coderiver: (X: 0px, Y:0px, W: 49px, H: 5px, TW: 49px, TH: 14px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(icon-about: (X: 0px, Y:0px, W: 47px, H: 47px, TW: 98px, TH: 98px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(icon-experience: (X: -51px, Y:0px, W: 47px, H: 47px, TW: 98px, TH: 98px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(icon-info: (X: 0px, Y:-51px, W: 47px, H: 47px, TW: 98px, TH: 98px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(icon-js: (X: -51px, Y:-51px, W: 47px, H: 47px, TW: 98px, TH: 98px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -37,15 +39,27 @@ $icons: map-merge($icons,(coderiver: (X: 0px, Y:0px, W: 49px, H: 5px, TW: 49px, 
 	+sprite-retina($i)	
 
 //
-//.icon-codedby
+//.icon-icon-about
 //	width: 47px
-//	height: 5px
-//	background-image: url('../img/icons.png')
-//	background-position: 0px -9px
-//
-//.icon-coderiver
-//	width: 49px
-//	height: 5px
+//	height: 47px
 //	background-image: url('../img/icons.png')
 //	background-position: 0px 0px
+//
+//.icon-icon-experience
+//	width: 47px
+//	height: 47px
+//	background-image: url('../img/icons.png')
+//	background-position: -51px 0px
+//
+//.icon-icon-info
+//	width: 47px
+//	height: 47px
+//	background-image: url('../img/icons.png')
+//	background-position: 0px -51px
+//
+//.icon-icon-js
+//	width: 47px
+//	height: 47px
+//	background-image: url('../img/icons.png')
+//	background-position: -51px -51px
 //
