--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,1 +1,50 @@
 // Normally mainpage styles
+.header
+	position: relative
+	z-index: 10
+.header-list
+	align-items: center
+	display: flex
+	flex-direction: row
+	flex-wrap: wrap
+	height: 80px
+	justify-content: space-around
+	&__link
+		color: $color-link
+		&:hover
+			color: $color-primary
+
+.form
+	position: relative
+	text-align: center
+	z-index: 3
+	&__title-primary
+		margin: 120px 0 0
+
+.list
+	padding: 70px 0 0
+	&__title
+		position: relative
+		padding: 30px 0 0
+		&:before
+			content: ''
+			display: block
+			position: absolute
+			bottom: 100%
+			left: 0
+			right: 0
+			margin: auto
+		&:nth-of-type(1)
+			&:before
+				+s(icon-info)
+		&:nth-of-type(2)
+			&:before
+				+s(icon-experience)
+		&:nth-of-type(3)
+			&:before
+				+s(icon-js)
+		&:nth-of-type(4)
+			&:before
+				+s(icon-about)
+	&__content
+		padding: 50px 0 70px
